[package]
name = "kiba"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["json", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
